--- a/Notes/01.27.md
+++ b/Notes/01.27.md
@@ -9,22 +9,54 @@
 - Union = s.add(T t)
 - Intersect = s.remove(T t)
 
-## Data - stores
+### Data - stores
 
 - .add()
 - .remove()
 - . contain()
 
-## Traversal
+### Traversal
 
 - Loop
 - foreach
 
-## Evaluation
+### Evaluation
 
 - traversal has O(n)
 
-## HashMap
+### HashMap
 
 - O(1)
--
+
+### Element type
+
+- index only
+
+## Bitset32
+
+class Bitset32 {
+int bits;
+
+    BitSet32(){};
+
+    boolean contain(int keys) {     // O(1)
+        return (bits & (1 << key)) !== 0;
+    }
+
+    void add (int key) {        // O(1)
+        bits != (1<<key);
+    }
+
+    void remove (int a) {       // O(1)
+        bits & = n (1 << key );
+    }
+
+    boolean isEmpty() {
+        return (bits == 0);
+    }
+
+    void printAll(){
+        for (int i = 0; i < 32; ++i> if (contains(i)) print(i))
+    }
+
+}
