--- a/Notes/03.01(datastore).md
+++ b/Notes/03.01(datastore).md
@@ -1,1 +1,58 @@
+# Data Store
+
+## Persistent data store
+  - pick a data structure
+  - Map to blocks/buffers
+  - Convert representation 
+
+
+## Appilicaiton
+  - Key-value stores: map
+  - databases
+     - Multiple maps
+     - Query/update
+ 
+  - Directories / File System
+     - Persistent data store 
+     - Two nodes (leaves and sub directory/ sub file system)
+  
+  - Caches
+     - map of url to the page content
+     - Eviction policy (certain cases remove some urls)
+ 
+## Extendable Hashing
+  - Imagine 4 items hash to the same index bucket
+  - Insert: add to block, 
+       - if full: if possible -> split
+       - else double the table
+         if still full => retry split, duoble 
+         
+         
+         
+## B-Tree
+```
+  BTree node {
+    long BTreeNode(){return buf, setLength(0)}
+    long parent;
+  }
+
+```
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 
