--- a/Notes/02.24(Persistent Data Store).md
+++ b/Notes/02.24(Persistent Data Store).md
@@ -1,1 +1,45 @@
 # Persistent Data Store
+
+
+## Block
+  - Block is used for a fixed amount of data (typically technically determined) which typically is only part of a whole, e. g. the first 1024 bytes of a file
+  - The next block would then also be 1024 bytes long
+
+## Buffer
+  - Buffers are chunks of memory used to store data before offloading it to a final destination.
+  - Buffer is a piece of memory in which things are collected in order to process them as a whole when the buffer is full (or nearly full)
+
+  - A buffer would accept a certain amount of data from RAM then hit the interupts signal to tell the CPU to stop bumping data, but then drain the data into the secondary device (disk, HDD)
+  - After receiving the data in the buffer, the data get transferred to disk from buffer in a single operation.
+
+
+### Types of I/O buffering techniques:
+
+1. Single buffer:
+  - A buffer is provided by the operating system to the system portion of the main memory
+
+
+![image](https://user-images.githubusercontent.com/66233296/156810803-c1f855b5-9fab-4bde-8660-4e7216278358.png)
+![image](https://user-images.githubusercontent.com/66233296/156810841-d03f0ddd-0073-4993-b95f-addaa2648a8a.png)
+![image](https://user-images.githubusercontent.com/66233296/156811069-9cca40fa-f66d-4315-90df-0f625244c1d0.png)
+
+
+
+2. Double buffer: 
+![image](https://user-images.githubusercontent.com/66233296/156811035-31f8706e-fd86-46bc-bbd4-5cc9040f7f9c.png)
+![image](https://user-images.githubusercontent.com/66233296/156812079-d58e995c-78b4-409b-8ac3-c7a8c1dcd9e5.png)
+
+
+3. Circular buffer: 
+![image](https://user-images.githubusercontent.com/66233296/156811950-732d72f3-0568-4acc-bb3a-2b347e8b7fac.png)
+
+
+
+
+
+
+
+
+
+
+
