--- a/Notes/02.24(Persistent Data Store).md
+++ b/Notes/02.24(Persistent Data Store).md
@@ -35,6 +35,18 @@
 
 
 
+## Caching
+  - Caching is a technique which allows users to store data in an area of data so that the processor can grab the data quickly
+
+
+## Object Relational Mapping
+  - ORM allows users to interact with the database using object-oriented paradigm
+  - Hibernate JPA is a light open-source api for java to interact with the database without using JDBC like the old way
+
+<img width="1219" alt="image" src="https://user-images.githubusercontent.com/66233296/156860511-2c51ddcf-24f3-4563-b2b6-00fc39ed5c5c.png">
+
+
+
 
 
 
