java.nio.FileChannel and Byte buffer

--- a/Notes/02.24(Persistent Data Store).md
+++ b/Notes/02.24(Persistent Data Store).md
@@ -46,10 +46,52 @@
 <img width="1219" alt="image" src="https://user-images.githubusercontent.com/66233296/156860511-2c51ddcf-24f3-4563-b2b6-00fc39ed5c5c.png">
 
 
+## Java NIO (new IO)
+  - NIO works with channel and buffer
+  - buffer helps store a chunk of data before flush it to disk or any other data devices
+  - channel is the bridge connect buffer with data store (file, socket, ...)
+    - With the old IO, if you want to read a file we need to create a stream (fstream) to connect the file
+    - With the new IO, create a channel to connect the file, read data from channel to buffer and process data in buffer
 
 
+### Channel 
+  - Similar to stream in old IO
+  - Channel reads and writes in 2 directions, stream can do only one
+  - Channel can read and write at the same time
+  - Channel needs to read and write FROM a buffer
 
+### Java NIO buffer -- byte buffer
+  - Initially, buffer has write mode, call buffer.flip() to flip the mode to read mode
+  - .clea() or .compact() to clear buffer
+[byte buffer java doc page](https://docs.oracle.com/javase/8/docs/api/java/nio/ByteBuffer.html)
 
+### FileChannel
+```
+  public static void readFileChannel() throws IOException {
+      RandomAccessFile randomAccessFile = new RandomAccessFile(FILE PATH, "rw");
+      FileChannel fileChannel = randomAccessFile.getChannel();
+      ByteBuffer byteBuffer = ByteBuffer.allocate(512);
+      Charset charset = Charset.forName("US-ASCII");
+      while (fileChannel.read(byteBuffer) > 0) {
+         byteBuffer.rewind();
+         System.out.print(charset.decode(byteBuffer));
+         byteBuffer.flip();
+      }
+      fileChannel.close();
+      randomAccessFile.close();
+   }
+   
+   public static void writeFileChannel(ByteBuffer byteBuffer)throws IOException {
+      Set<StandardOpenOption> options = new HashSet<>();
+      options.add(StandardOpenOption.CREATE);
+      options.add(StandardOpenOption.APPEND);
+      Path path = Paths.get("C:/Test/temp.txt");
+      FileChannel fileChannel = FileChannel.open(path, options);
+      fileChannel.write(byteBuffer);
+      fileChannel.close();
+   }
+
+```
 
 
 
