--- a/Notes/03.01(datastore).md
+++ b/Notes/03.01(datastore).md
@@ -1,5 +1,8 @@
 # Data Store
 
+## Latency
+  - Latency is the time between each IO request is sent and IO response received
+
 ## Persistent data store
   - pick a data structure
   - Map to blocks/buffers
@@ -37,6 +40,12 @@
   }
 
 ```
+
+## Marshalling
+  - The process convert a POJO to XML (example)
+
+## Unmarshalling
+  - The process convert an XML to POJO
 
 
 
