Added serialization | deserialization

--- a/Notes/03.03(Serialization).md
+++ b/Notes/03.03(Serialization).md
@@ -1,17 +1,48 @@
 # Serialization, Externalization, Picklines
 
-## Serialization
 
-- store in a .ser file (google this)
+## Marshalling
+  - The process convert a POJO to XML (example)
 
-``` 
-  ObjectOutputStream s = new ObjectOutputStream (new File("pointer.ser"))
-  
-  Point p = new Point()l
-  
-  s.writeObject(p);
-  
+## Unmarshalling
+  - The process convert an XML to POJO
+
+
+## Serialization 
+  - In java, objects created in each class will be wiped off by garbage collector after a running session
+  - In order to transfer an object, we need to store it on a disk or send it over a network this is when we need to transform it into a byte stream
+  - To transfrom an object to byte stream, that class which the object is generated in needs to implement the interface "Serializable" 
+### => Serialization is the process of converting the code Object into a Byte Stream to transfer the Object Code from one application (JVM1) to another app (JVM2)
+
+#### example of serialization
+
 ```
+public class ValueObject implements Serializable {
+
+   private String value;
+   private String sideEffect;
+
+}
+```
+
+   - Store file in a .ser extension
+```
+ValueObject vo1 = new ValueObject("Hi");
+FileOutputStream fileOut = new FileOutputStream("ValueObject.ser");
+ObjectOutputStream out = new ObjectOutputStream(fileOut);
+out.writeObject(vo1);
+out.close();
+fileOut.close();
+```
+
+
+## Deserialization
+### => Deserialization is exactly the other way around (opposite of serialization) and allows us to recreate an object from a byte stream
+
+
+
+
+
 
 [Serialization Resources Page](https://www.tutorialspoint.com/java/java_serialization.htm)
 
