--- a/Notes/03.03(Serialization).md
+++ b/Notes/03.03(Serialization).md
@@ -8,7 +8,7 @@
   - The process convert an XML to POJO
 
 
-## Serialization 
+## Serialization interface
   - In java, objects created in each class will be wiped off by garbage collector after a running session
   - In order to transfer an object, we need to store it on a disk or send it over a network this is when we need to transform it into a byte stream
   - To transfrom an object to byte stream, that class which the object is generated in needs to implement the interface "Serializable" 
@@ -36,19 +36,93 @@ fileOut.close();
 ```
 
 
-## Deserialization
+## Deserialization interface
 ### => Deserialization is exactly the other way around (opposite of serialization) and allows us to recreate an object from a byte stream
 
+#### [Serialization|Deserialization blog](https://snyk.io/blog/serialization-and-deserialization-in-java/)
+#### [Serialization Resources Page](https://www.tutorialspoint.com/java/java_serialization.htm)
+
+## Externalization interface
+  - Serialization is not much effective with bloated objects with multiple attributes and properties => externalization comes into role
+  - Externalzation allows developers to customize the serialization
+  - .readExternal() and .writeExternal()
+#### Example 
 
 
+User.java
+```
+@Data // (lombok)
+public class User implements Externalizable {  
+    private String name;  
+    private int age; 
+    
+    @Override  
+    public void readExternal(ObjectInput in) throws IOException,ClassNotFoundException {  
+        name=(String) in.readObject();  
+        age=in.readInt();  
+    }  
+    @Override  
+    public void writeExternal(ObjectOutput out) throws IOException {  
+        out.writeObject(name);  
+        out.writeInt(age);  
+    }  
+    
+}
+```
+Main.java
+```
+public static void main(String... args) throws Exception, IOException{  
+           File f= new File("Test.txt");  
+           User u= new User("JavaTpoint",25);  
+           ObjectOutputStream out = new ObjectOutputStream(new FileOutputStream(f));    
+           out.writeObject(u);    
+           ObjectInputStream in = new ObjectInputStream(new FileInputStream(f));  
+           u=(User)in.readObject();  
+           System.out.println("After De externalization username: " +u.getUserName()+" and age is:"+u.getAge());     
+}  
+```
+Ouput
+``` After De externalization username: JavaTpoint and age is:25 ```
 
 
+## Linked HashMap
+  - Just like a java.util.HashMap with an additional feature of "maintaining an order" of elements inserted into it
 
-[Serialization Resources Page](https://www.tutorialspoint.com/java/java_serialization.htm)
+```
+ public static void main(String args[])
+    {
+        // Initialization of a LinkedHashMap
+        // using Generics
+        LinkedHashMap<Integer, String> hm
+            = new LinkedHashMap<Integer, String>();
+ 
+        // Inserting the Elements
+        // using put() method
+        hm.put(3, "Geeks");
+        hm.put(2, "Geeks");
+        hm.put(1, "Geeks");
+        hm.put(4, "For");
+ 
+        // Printing the mappings to the console
+        System.out.println("Initial Map : " + hm);
+ 
+        // Removing the mapping with Key 4
+        hm.remove(4);
+ 
+        // Printing the updated map
+        System.out.println("Updated Map : " + hm);
+    }
+```
+
+Outout: 
+```
+Initial Map : {3=Geeks, 2=Geeks, 1=Geeks, 4=For}
+Updated Map : {3=Geeks, 2=Geeks, 1=Geeks}
+```
+
 
 Make a buffer cache to cache all the info needed 
 
--- Research on LinkedHashMap<K, V>
 -- LinkedHashMap::removeeldestEntry(Map.Entry<K, V> eldest)
 
 
