--- a/Notes/02.24(Persistent DB - JPA|ORM - Java NIO).md
+++ b/Notes/02.24(Persistent DB - JPA|ORM - Java NIO).md
@@ -38,14 +38,6 @@
 ## Caching
   - Caching is a technique which allows users to store data in an area of data so that the processor can grab the data quickly
 
-
-## Object Relational Mapping
-  - ORM allows users to interact with the database using object-oriented paradigm
-  - Hibernate JPA is a light open-source api for java to interact with the database without using JDBC like the old way
-
-<img width="1219" alt="image" src="https://user-images.githubusercontent.com/66233296/156860511-2c51ddcf-24f3-4563-b2b6-00fc39ed5c5c.png">
-
-
 ## Java NIO (new IO)
   - NIO works with channel and buffer
   - buffer helps store a chunk of data before flush it to disk or any other data devices
@@ -92,6 +84,41 @@
    }
 
 ```
+
+
+## Object Relational Mapping
+  - ORM allows users to interact with the database using object-oriented paradigm
+  - Hibernate JPA is a light open-source api for java to interact with the database without using JDBC like the old way
+
+<img width="1219" alt="image" src="https://user-images.githubusercontent.com/66233296/156860511-2c51ddcf-24f3-4563-b2b6-00fc39ed5c5c.png">
+
+## Data Persistence in Java using JPA
+  - JPA provides a mechanism for managing persistence and ORM
+  - JPA is considered as a link between an object-oriented model and a relational database system
+  - JPA is a specification of Java so it does not conduct any functioning by itself => needs implementation
+  - Therefore, ORM tools like ***Hibernate*** implements JPA specification
+  - For data persistence, javax.persistence package contains the JPA classes and interfaces
+  - To further simplify the persistence programming model:
+
+<img width="1413" alt="image" src="https://user-images.githubusercontent.com/66233296/156899828-ad4d34ef-4c94-49d1-ab3a-f2b6646ae198.png">
+
+
+## Hibernate - A java framework that works like an ORM tool implementing JPA
+  - Main feature of ***Hibernate*** is to map Java classes to database tables
+  - ***Hibernate*** is an implementation of JPA guidelines
+  - Helps mapping Java data types to SQL data types
+
+
+
+
+
+
+
+
+
+
+
+
 
 
 
