--- a/Notes/03.03(Serialization).md
+++ b/Notes/03.03(Serialization).md
@@ -12,6 +12,7 @@
   - In java, objects created in each class will be wiped off by garbage collector after a running session
   - In order to transfer an object, we need to store it on a disk or send it over a network this is when we need to transform it into a byte stream
   - To transfrom an object to byte stream, that class which the object is generated in needs to implement the interface "Serializable" 
+  - Serializable objects can be written to streams, and hence files, object databases, anything really.
 ### => Serialization is the process of converting the code Object into a Byte Stream to transfer the Object Code from one application (JVM1) to another app (JVM2)
 
 #### example of serialization
