--- a/Notes/02.22(B-Tree).md
+++ b/Notes/02.22(B-Tree).md
@@ -11,48 +11,113 @@
     + All leaves appear in the same level and carry no information
 
 ## B-Tree concept
-  - ### When the number of keys is high, the data is read from disk in the form of blocks.
+  - When the number of keys is high, the data is read from disk in the form of blocks.
   - The main idea of using B-Trees is to reduce the number of disk accesses
   - Most of the tree operations (search, insert, delete, max, min, ..etc ) require O(h) disk accesses where h is the height of the tree
   - The height of B-Trees is kept low by putting maximum possible keys in a B-Tree node
   - Generally, the B-Tree node size is kept equal to the disk block size
   - Since the height of the B-tree is low so total disk accesses for most of the operations are reduced significantly compared to balanced Binary Search Trees like AVL Tree, Red-Black Tree, ..etc
 
-<img width="675" alt="image" src="https://user-images.githubusercontent.com/66233296/156902803-b93f686e-53e4-4767-afea-3eb9190639d1.png">
+<img width="500" alt="image" src="https://user-images.githubusercontent.com/66233296/156902803-b93f686e-53e4-4767-afea-3eb9190639d1.png">
 
 ## B-tree's Properties
 <img width="713" alt="image" src="https://user-images.githubusercontent.com/66233296/156902816-1353e740-2249-495d-83af-daf62a86fab2.png">
 
 
+
+
 ```
-class BT{
+// Java program to illustrate the sum of two numbers
 
-  class BTree{
+// A BTree
+class Btree {
+	public BTreeNode root; // Pointer to root node
+	public int t; // Minimum degree
 
-    int k; // order
-    Object[] keys = new Object[MAXK];
-    Btree[] child = new Btree[MAXK];
-    Btree parent;
-    
-  }
-  
+	// Constructor (Initializes tree as empty)
+	Btree(int t) {
+		this.root = null;
+		this.t = t;
+	}
+
+	// function to traverse the tree
+	public void traverse() {
+		if (this.root != null)
+			this.root.traverse();
+		System.out.println();
+	}
+
+	// function to search a key in this tree
+	public BTreeNode search(int k) {
+		if (this.root == null)
+			return null;
+		else
+			return this.root.search(k);
+	}
 }
+
+// A BTree node
+class BTreeNode {
+	int[] keys; // An array of keys
+	int t; // Minimum degree (defines the range for number of keys)
+	BTreeNode[] C; // An array of child pointers
+	int n; // Current number of keys
+	boolean leaf; // Is true when node is leaf. Otherwise false
+
+	// Constructor
+	BTreeNode(int t, boolean leaf) {
+		this.t = t;
+		this.leaf = leaf;
+		this.keys = new int[2 * t - 1];
+		this.C = new BTreeNode[2 * t];
+		this.n = 0;
+	}
+
+	// A function to traverse all nodes in a subtree rooted with this node
+	public void traverse() {
+
+		// There are n keys and n+1 children, traverse through n keys
+		// and first n children
+		int i = 0;
+		for (i = 0; i < this.n; i++) {
+
+			// If this is not leaf, then before printing key[i],
+			// traverse the subtree rooted with child C[i].
+			if (this.leaf == false) {
+				C[i].traverse();
+			}
+			System.out.print(keys[i] + " ");
+		}
+
+		// Print the subtree rooted with last child
+		if (leaf == false)
+			C[i].traverse();
+	}
+
+	// A function to search a key in the subtree rooted with this node.
+	BTreeNode search(int k) { // returns NULL if k is not present.
+
+		// Find the first key greater than or equal to k
+		int i = 0;
+		while (i < n && k > keys[i])
+			i++;
+
+		// If the found key is equal to k, return this node
+		if (keys[i] == k)
+			return this;
+
+		// If the key is not found here and this is a leaf node
+		if (leaf == true)
+			return null;
+
+		// Go to the appropriate child
+		return C[i].search(k);
+
+	}
+}
+
+
 ```
-
-
-## Persistent data store
-  - block/buffers (research more)
- -data format
-      - marshiling, externilization, serialization
-      - primitives (ex: int)
-      - Strings 
-        - ascii
-        - fixed
-        - Unicode : UTF-8 (standard nowadays, consise), UTF-16(Chinese alphabet)
-        - Pointer/releases
-          - only allow for the data store as offset
-          - recursive
-      
 
 
 
