--- a/Notes/02.22(B-Tree).md
+++ b/Notes/02.22(B-Tree).md
@@ -4,11 +4,8 @@
 ## Convention
   - A self-balencing search tree
   - A B-Tree of order *m* is a tree that satisfies:
-    + Every node has at most m children
-    + Every non-leaf node (except root) has at least [m/2] child nodes
-    + Every non-leaf node has at least two children
-    + A non-leaf node with k children contains k-1 keys
-    + All leaves appear in the same level and carry no information
+<img width="650" alt="image" src="https://user-images.githubusercontent.com/66233296/156903275-3c661743-c1fe-47be-bd54-54121d22c40b.png">
+
 
 ## B-Tree concept
   - When the number of keys is high, the data is read from disk in the form of blocks.
@@ -23,6 +20,8 @@
 ## B-tree's Properties
 <img width="713" alt="image" src="https://user-images.githubusercontent.com/66233296/156902816-1353e740-2249-495d-83af-daf62a86fab2.png">
 
+## Interting into a B-Tree
+<img width="650" alt="image" src="https://user-images.githubusercontent.com/66233296/156903425-e2c1ae88-fce0-4535-9e3e-1c3e41337a92.png">
 
 
 
