--- a/Notes/02.10.15.17(Trees).md
+++ b/Notes/02.10.15.17(Trees).md
@@ -139,12 +139,75 @@ class Tree {
 
 
 
+# Predecessor and successor in BST
+
+## Pseudo Code
+
+1. If root is NULL => null
+
+2. if key is found then
+  -  The predecessor is the right most child of left subtree or left child itself
+  -  The successor is the left mostchild of the right subtree or the right child itself
+
+3. if (key < root)
+    - set the successor as root
+    - search recursively into left subtree
+  else // key > root
+    - set predecessor as root
+    - search recursively into right subtree
+  
+### predecessor is the largest node that's smaller than current node (left subtree) (one step left then right until you can)
+```
+  public int findPredecessor(TreeNode currNode) {
+    if (currNode == null) return null;
+    
+    if (currNode.left != null) {
+      currNode = currNode.left;
+      while (currNode.right != null) {
+        currNode = currNode.right;
+      }
+      return currNode;
+    } else {
+      Node parent = currNode.parent;
+      while (parent != null && currNode = parent.left) {
+        currNode = parent;
+        parent = currNode.parent;
+      }
+      
+      if (parent == null) return -1; // no predecessor
+      else return parent;
+      
+    }
+    
+  }
+```
 
 
+### successor is the smallest node that's larger than current node (right subtree) (one step right then left until you can)
+```
+  public int findSuccessor(TreeNode root){
+		 if (root == null) return null; 
+		 if (root.right != null) {
+			root = root.right; 
+			while(root.left != null) { 
+				root = root.left; 
+			} 
+			return root; 
+		} else { // root.right == null
+			TreeNode parent = currNode.parent;
+			while (parent != null && currNode == parent.right) {
+				currNode = parent;
+				parent = currNode.parent;
+			}
+			if (parent == null) return null; // no successor
+			else return parent;
+		}
+	}
+```
 
 
-
-
+  
+<img width="979" alt="image" src="https://user-images.githubusercontent.com/66233296/156906776-847d3705-5f08-4919-9420-a10da6a17799.png">
 
 
 
