--- a/Notes/03.03(Serialization).md
+++ b/Notes/03.03(Serialization).md
@@ -2,7 +2,7 @@
 
 
 ## Marshalling
-  - The process convert a POJO to XML (example)
+  - The process convert a POJO to XML 
 
 ## Unmarshalling
   - The process convert an XML to POJO
