Implement Java.io.serialziable to HT class

--- a/Notes/02.03_08(Hashing).md
+++ b/Notes/02.03_08(Hashing).md
@@ -6,9 +6,11 @@
   - Power of two 
 
 
+*** 
+
 ### Sample Code
 ```
-class HT {
+class HT implements java.io.serializable{
   static final class Node {
     Object key;
     Node next;
@@ -22,6 +24,26 @@ class HT {
   
   Node[] table = new Node[8];
   int size = 0;
+  
+  private void writeObject(ObjectOutputStream s) throws IOException {
+    s.defaultWriteObject();
+    s.writeInt(size);
+    for (int i = 0; i < table.length; i++) {
+      for ( Node e = table[i]; e != null; e = e.next){
+        s.writeObject(e.key);
+      }
+    }
+  }
+  
+  private void readObject(ObjectInputStream s) throws IO Exception {
+    s.defaultReadObject();
+    int n = s.readInt();
+    
+    for (int i = 0; i < n; ++i) {
+      add(s.readObject());
+    }
+    
+  }
   
   boolean contains(Object key) {
     int h = key.hashCode(); // step 1 get hashCode
