--- a/Notes/02.03_08(Hashing).md
+++ b/Notes/02.03_08(Hashing).md
@@ -6,7 +6,8 @@
   - Power of two 
 
 
-*** 
+***notes for assignment 2***
+random access file contains the business ID, then if a user type in a business name => the program find the position of the business in persistent data stores
 
 ### Sample Code
 ```
