Added digitalTree::contains() class

--- a/Notes/03.03(Serialization - BinaryTree).md
+++ b/Notes/03.03(Serialization - BinaryTree).md
@@ -133,10 +133,39 @@ Make a buffer cache to cache all the info needed
   - At each level k, choose lefet/right based on bit K
   - Max levels = max nums of bits
 
+- suffix trees
 
 
 
+- prefix trees
 
+```
+  class DigitalTree {
+     static class Node {
+        long key;
+        Node left, right;
+        Node(...); // constructor
+     }
+     
+     Node root;
+     
+     public boolean contains(long key,) {
+        return contains (key, root, 0);
+     }
+     
+     boolean contains(long key, Node t, int level) {
+        if (t == null) return false;
+        else if (t.key == key) return true;
+        else if ((key & (1L << level)) == 0) 
+          return contains(key, node.left, level + 1);
+        else 
+          return contains(key, node.right, level + 1)
+     }
+  }
+
+```
+
+***throwAway assignment 5 => write add()***
 
 
 
