Update 03.03(Serialization - BinaryTree).md

--- a/Notes/03.03(Serialization - BinaryTree).md
+++ b/Notes/03.03(Serialization - BinaryTree).md
@@ -167,7 +167,7 @@ Make a buffer cache to cache all the info needed
 
 ***throwAway assignment 5 => write add()***
 
-Midterm
+Midterm from 1-8, 10 (sort)
 
 
 
