Update 03.03(Serialization - BinaryTree).md

--- a/Notes/03.03(Serialization - BinaryTree).md
+++ b/Notes/03.03(Serialization - BinaryTree).md
@@ -149,17 +149,33 @@ Make a buffer cache to cache all the info needed
      
      Node root;
      
-     public boolean contains(long key,) {
+     public boolean contains(long key) {
         return contains (key, root, 0);
      }
      
-     boolean contains(long key, Node t, int level) {
+     private static boolean contains(long key, Node t, int level) {
         if (t == null) return false;
         else if (t.key == key) return true;
         else if ((key & (1L << level)) == 0) 
           return contains(key, node.left, level + 1);
         else 
           return contains(key, node.right, level + 1)
+     }
+     
+     public void add(long key, Node t, int level) {
+        if (t == null) return;
+        
+        if (~(1L << level) & key == 0) {
+          t.left = new Node(key);
+        } else if (~(1L << level) & key == 1){
+          t.right = new Node(key);
+        } else if (t.left != null){
+          add(key, t.left, level + 1;
+        } else {
+          add(key, t.right, level + 1;
+        }
+        
+        
      }
   }
 
