--- a/Notes/03.01(datastore).md
+++ b/Notes/03.01(datastore).md
@@ -1,5 +1,25 @@
 # Data Store
 
+## DISK
+<img width="792" alt="image" src="https://user-images.githubusercontent.com/66233296/158074874-bb558623-e057-49b1-b801-f685332ecd21.png">
+
+  - Disks are made up of 
+    + tracks
+    + dis sectors
+    + track sector or block
+    + actuator arm
+
+#### Block: The smallest storage unit on a disk is typically 512 bytes in size
+#### To access a specific piece of data on disk, the disk spins and the actuator arm rotates so that the block where the piece of data is stored is positioned underneath the magnetic head
+  - Moving from one block to another would require the arm to rotate and the disk to spin
+
+## Indexing
+  - An index is a table whose rows point to the location of other blocks on disk (not physically store the data)
+
+<img width="685" alt="image" src="https://user-images.githubusercontent.com/66233296/158075326-c5004929-086e-4215-8e28-307c3cf2c23f.png">
+- In this image, we can see that the Outer Index points to a block that contains multiple Inner Indexes, which points to yet another block that contains pieces of data
+    
+
 ## Latency
   - Latency is the time between each IO request is sent and IO response received
 
