--- a/Notes/03.29-04.05(graph).md
+++ b/Notes/03.29-04.05(graph).md
@@ -1,9 +1,20 @@
 
 # Graphs
 
-## notes
-- Use priority queue to find shortest path
-- Research on Breadth first search
+## Introduction to Graph
+
+- **Nodes** (also known as Vertices, or just Records or Objects) may have properties (attributes). They are often the contents of data stores, as covered so far in course.
+
+- **Edges** (also known as links, or in some cases just pointers) connect a source Node to a destination Node. Edges represent relations (two-argument predicates). For example if Nodes represent Airports, edge A->B could represent flight(A,B) -- a flight from A to B.
 
 
-## Dynamic programming
+
+## Graph Traversal
+
+### Depth-first search 
+- Using FIFO stack based datastructure
+![image](https://user-images.githubusercontent.com/66233296/164994298-8a45cd41-7432-4894-b810-2570f9083e8a.png)
+
+### Breadth-first search
+- Using LIFO queue based datastructure
+![image](https://user-images.githubusercontent.com/66233296/164994498-f3a87256-5e65-439d-9084-262173a06d5d.png)
